// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrInput renders correctly 1`] = `
<div
  class="cdr-label-standalone"
>
  <div
    class="cdr-label-standalone__label-wrapper"
  >
    <label
      class="cdr-label-standalone__label"
      for="renders"
    >
      Label Test
    </label>
  </div>
  <div
    class="cdr-label-standalone__input-wrap cdr-label-standalone__input-spacing"
  >
    <div
      class="cdr-input-wrap"
    >
      <input
        autocapitalize="off"
        autocorrect="off"
        class="cdr-input cdr-input--primary"
        id="renders"
        spellcheck="false"
        type="text"
      />
    </div>
  </div>
  <div
    class="cdr-label-standalone__post-content"
  />
</div>
`;

exports[`CdrInput renders number input correctly 1`] = `
<div
  class="cdr-label-standalone"
>
  <div
    class="cdr-label-standalone__label-wrapper"
  >
    <label
      class="cdr-label-standalone__label"
      for="renders"
    >
      Label Test
    </label>
  </div>
  <div
    class="cdr-label-standalone__input-wrap cdr-label-standalone__input-spacing"
  >
    <div
      class="cdr-input-wrap"
    >
      <input
        autocapitalize="off"
        autocorrect="off"
        class="cdr-input cdr-input--primary"
        id="renders"
        inputmode="numeric"
        novalidate="novalidate"
        pattern="[0-9]*"
        spellcheck="false"
        type="number"
      />
    </div>
  </div>
  <div
    class="cdr-label-standalone__post-content"
  />
</div>
`;
